--- a/charts-comparison/package.json
+++ b/charts-comparison/package.json
@@ -38,9 +38,9 @@
     "@angular/platform-browser": "~5.2.6",
     "@angular/platform-browser-dynamic": "~5.2.6",
     "@angular/router": "~5.2.6",
-    "@nebular/auth": "2.0.0-rc.6",
+    "@nebular/auth": "^2.0.0-rc.6",
     "@nebular/security": "2.0.0-rc.6",
-    "@nebular/theme": "2.0.0-rc.6",
+    "@nebular/theme": "^2.0.0-rc.6",
     "@ng-bootstrap/ng-bootstrap": "1.0.0",
     "angular2-chartjs": "^0.5.0",
     "bootstrap": "4.0.0",
@@ -51,6 +51,7 @@
     "ionicons": "2.0.1",
     "nebular-icons": "1.0.6",
     "ngx-echarts": "^2.1.0",
+    "node-sass": "^4.8.1",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
@@ -61,7 +62,7 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.1",
+    "@angular/cli": "^1.7.3",
     "@angular/compiler-cli": "~5.2.6",
     "@angular/language-service": "~5.2.6",
     "@compodoc/compodoc": "1.0.1",
